--- a/docs/docs.styles.scss
+++ b/docs/docs.styles.scss
@@ -16,7 +16,7 @@ $docs-status-ready: #7cb518;
 $docs-breakpoint: 800px;
 $docs-breakpoint-small: 600px;
 $docs-color-heading: rgb(30, 30, 30);
-$docs-color-text: shade($color-silver, 70%);
+$docs-color-text: shade($color-grey, 70%);
 
 /* BASE
 --------------------------------------------- */
@@ -53,9 +53,9 @@ main section section > div > div[class^="rsg--root"] {
 
 // Link color
 div[class^="rsg--root"] a[class^="rsg--link"] {
-  color: $color-bleu-de-france;
+  color: $color-primary-indigo;
   &:hover {
-    color: $color-bleu-de-france-dark;
+    color: $color-primary-indigo-dark;
   }
 }
 
@@ -164,7 +164,7 @@ p[class^="rsg--para"] {
     -webkit-font-smoothing: subpixel-antialiased;
     -moz-osx-font-smoothing: auto;
     background: tint($docs-grey, 75%);
-    color: shade($color-silver, 20%);
+    color: shade($color-grey, 20%);
     padding: $space-xx-small;
     border-radius: $radius-default;
     font-size: 87.5%;
@@ -210,7 +210,7 @@ div[class^="rsg--logo"] {
   @include inset-space($space-m);
   border-bottom: 1px solid rgba($color-white, 0.1);
   h1 {
-    color: tint($color-bleu-de-france, 90%);
+    color: tint($color-primary-indigo, 90%);
     font-weight: $weight-normal;
   }
 }
@@ -219,12 +219,12 @@ div[class^="rsg--logo"] {
 p[class^="rsg--version"] {
   @include inset-squish-space($space-xs);
   margin: $space-xs 0 0;
-  color: $color-bleu-de-france;
+  color: $color-primary-indigo;
   font-family: "Fira Sans", Helvetica, Arial, sans-serif;
   font-weight: $weight-normal;
   display: inline-block;
   line-height: $line-height-xs;
-  border: 1px solid $color-bleu-de-france;
+  border: 1px solid $color-primary-indigo;
   text-transform: uppercase;
   letter-spacing: 1px;
   font-size: $size-xs;
@@ -236,9 +236,9 @@ div[class^="rsg--search"] input {
   @include inset-squish-space($space-s);
   color: $color-white;
   border: 1px solid transparent;
-  background: mix($color-bleu-de-france, $color-rich-black, 20%);
+  background: mix($color-primary-indigo, $color-dark, 20%);
   &:focus {
-    border: 1px solid $color-bleu-de-france;
+    border: 1px solid $color-primary-indigo;
     &::-webkit-textfield-decoration-container {
       display: none !important;
     }
@@ -247,20 +247,20 @@ div[class^="rsg--search"] input {
     }
   }
   &::-webkit-input-placeholder {
-    color: rgba(mix($color-white, $color-bleu-de-france, 50%), 0.35);
+    color: rgba(mix($color-white, $color-primary-indigo, 50%), 0.35);
   }
   &:-ms-input-placeholder {
-    color: rgba(mix($color-white, $color-bleu-de-france, 50%), 0.35);
+    color: rgba(mix($color-white, $color-primary-indigo, 50%), 0.35);
   }
   &::-moz-placeholder {
-    color: rgba(mix($color-white, $color-bleu-de-france, 50%), 0.35);
+    color: rgba(mix($color-white, $color-primary-indigo, 50%), 0.35);
     opacity: 1;
   }
 }
 
 // Sets sidebar background
 div[class^="rsg--sidebar"] {
-  background: mix($color-bleu-de-france, $color-rich-black, 5%);
+  background: mix($color-primary-indigo, $color-dark, 5%);
   border: 0;
   @media (max-width: #{$docs-breakpoint}) {
     padding-bottom: $space-l;
@@ -286,16 +286,16 @@ div[class^="rsg--sidebar"] {
     -moz-osx-font-smoothing: grayscale;
     padding: $space-xx-small $space-m;
     font-weight: $weight-semi-bold;
-    color: $color-bleu-de-france;
+    color: $color-primary-indigo;
     display: block;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
     &:hover {
-      color: $color-bleu-de-france-lighter;
+      color: $color-primary-indigo-lighter;
     }
     &:active {
-      color: $color-bleu-de-france-dark;
+      color: $color-primary-indigo-dark;
     }
   }
 
@@ -306,7 +306,7 @@ div[class^="rsg--sidebar"] {
     }
     & > a,
     & > a:hover {
-      color: tint($color-bleu-de-france, 80%);
+      color: tint($color-primary-indigo, 80%);
     }
   }
 
@@ -352,7 +352,7 @@ div[class^="rsg--preview"] {
   padding: $space-l / 1.2;
   background-color: tint($docs-grey, 90%);
   border: 1px solid tint($docs-grey, 50%);
-  box-shadow: inset 0 0 $space-xs rgba($color-rich-black, 0.05);
+  box-shadow: inset 0 0 $space-xs rgba($color-dark, 0.05);
   margin: $space-s 0 0;
   border-radius: 0;
   display: block;
@@ -398,7 +398,7 @@ thead[class^="rsg--tableHead"] {
 pre[class^="rsg--pre"],
 .vueds-html.cm-s-night.CodeMirror,
 .react-codemirror2 .CodeMirror.CodeMirror {
-  background: mix($color-bleu-de-france, $color-rich-black, 10%);
+  background: mix($color-primary-indigo, $color-dark, 10%);
   border-bottom-left-radius: $radius-default;
   border-bottom-right-radius: $radius-default;
   box-sizing: border-box;
@@ -436,7 +436,7 @@ div[class^="rsg--tab"] {
   .vueds-tabs {
     z-index: 5;
     border-radius: $radius-default;
-    box-shadow: 0 2px 8px rgba($color-rich-black, 0.8);
+    box-shadow: 0 2px 8px rgba($color-dark, 0.8);
     overflow: hidden;
     position: absolute;
     top: $space-m;
@@ -451,17 +451,17 @@ div[class^="rsg--tab"] {
       line-height: $line-height-s;
       @include inset-squish-space($space-s);
       cursor: pointer;
-      background: mix($color-bleu-de-france, $color-rich-black, 50%);
+      background: mix($color-primary-indigo, $color-dark, 50%);
       color: $color-white;
       &:active {
-        background: mix($color-bleu-de-france, $color-rich-black, 45%);
+        background: mix($color-primary-indigo, $color-dark, 45%);
       }
       &:focus {
         outline: none;
       }
       &--active {
-        background: mix($color-bleu-de-france, $color-rich-black, 40%);
-        box-shadow: inset 0 2px 8px rgba($color-rich-black, 0.2);
+        background: mix($color-primary-indigo, $color-dark, 40%);
+        box-shadow: inset 0 2px 8px rgba($color-dark, 0.2);
       }
     }
   }
@@ -491,7 +491,7 @@ div[class^="rsg--tab"] {
 .cm-s-night span.cm-tag,
 .hljs-tag,
 .hljs-name {
-  color: $color-bleu-de-france-light !important;
+  color: $color-primary-indigo-light !important;
 }
 .hljs-attribute,
 .hljs-keyword,
@@ -509,17 +509,17 @@ div[class^="rsg--tab"] {
 // Code highlighting elsewhere
 span[class^="rsg--type"],
 code[class^="rsg--code"] {
-  color: $color-silver;
+  color: $color-grey;
 }
 span[class^="rsg--name"] code[class^="rsg--code"],
 code.name {
   font-weight: $weight-bold;
-  color: shade($color-silver, 50%);
+  color: shade($color-grey, 50%);
 }
 span[class^="rsg--type"] code[class^="rsg--code"],
 code.type {
   background: tint($docs-grey, 75%);
-  color: shade($color-silver, 20%);
+  color: shade($color-grey, 20%);
   padding: $space-xx-small;
   border-radius: $radius-default;
 }
@@ -554,7 +554,7 @@ div[class^="rsg--root"] div[class^="rsg--tabs"] {
   letter-spacing: 1px;
   font-size: $size-xs;
   border-radius: $radius-default;
-  color: $color-rich-black;
+  color: $color-dark;
   position: absolute;
   right: $space-xl;
   top: $space-xl * 1.2;
@@ -573,14 +573,14 @@ div[class^="rsg--root"] div[class^="rsg--tabs"] {
   &-review,
   &-under-review {
     background: $color-ucla-gold;
-    color: $color-rich-black;
+    color: $color-dark;
   }
   &-prototype {
-    background: $color-bleu-de-france;
+    background: $color-primary-indigo;
     color: $color-white;
   }
   &-deprecated {
-    background: $color-vermilion;
+    background: $color-brand;
     color: $color-white;
   }
 }
@@ -669,6 +669,7 @@ a[href="#private-components"] + ul {
 ul a[href*="/#/Getting Started/Components"],
 ul a[href*="/#/Design Tokens/Color"],
 ul a[href*="/#/Design Tokens/Spacing"],
+ul a[href*="/#/Design Tokens/Fonts"],
 ul a[href*="/#/Design Tokens/FontSize"],
 ul a[href*="/#/Design Tokens/All"],
 ul a[href*="/#/Private Components"] {
