--- a/docs/docs.tokens.scss
+++ b/docs/docs.tokens.scss
@@ -9,18 +9,18 @@ $color-ucla-gold-darker: rgb(179, 128, 0) !default;
 $color-vermilion-lighter: rgb(244, 151, 138) !default;
 $color-vermilion-darker: rgb(154, 31, 14) !default;
 $color-ucla-gold-lighter: rgb(255, 219, 128) !default;
-$color-bleu-de-france-dark: rgb(16, 112, 209) !default;
-$color-bleu-de-france-light: rgb(84, 163, 242) !default;
-$color-silver: rgb(127, 136, 145) !default;
+$color-primary-indigo-dark: rgb(16, 112, 209) !default;
+$color-primary-indigo-light: rgb(84, 163, 242) !default;
+$color-grey: rgb(127, 136, 145) !default;
 $color-white: rgb(255, 255, 255) !default;
-$color-bleu-de-france: rgb(37, 138, 239) !default;
-$color-bleu-de-france-darker: rgb(12, 87, 161) !default;
-$color-bleu-de-france-lighter: rgb(132, 189, 246) !default;
+$color-primary-indigo: rgb(37, 138, 239) !default;
+$color-primary-indigo-darker: rgb(12, 87, 161) !default;
+$color-primary-indigo-lighter: rgb(132, 189, 246) !default;
 $color-ucla-gold-dark: rgb(230, 164, 0) !default;
 $color-vermilion-light: rgb(239, 101, 82) !default;
 $color-vermilion-dark: rgb(201, 40, 19) !default;
 $color-ucla-gold-light: rgb(255, 204, 77) !default;
-$color-rich-black: rgb(0, 17, 35) !default;
+$color-dark: rgb(0, 17, 35) !default;
 $color-cloud: rgb(233, 243, 253) !default;
 $color-oxford-blue: rgb(0, 38, 77) !default;
 $color-vermilion: rgb(235, 59, 36) !default;
