change fonts to roboto and azo sans

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,6 +5,7 @@
  * CSS in your final, compiled files.
  */
 
+@import "../styles/fonts";
 @import "../styles/functions";
 @import "../styles/mixins";
 @import "../styles/spacing";
