--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,6 +4,9 @@
  * mixins, etc. in this file, to prevent duplicated
  * CSS in your final, compiled files.
  */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 @import "../styles/fonts";
 @import "../styles/functions";
