--- a/src/styles/_bulma.scss
+++ b/src/styles/_bulma.scss
@@ -10,15 +10,15 @@
 // $family-sans-serif: $font-text;
 // $family-monospace: $font-mono;
 
-// $primary: $color-brand;
-// $primary-invert: $color-grey-light;
-// $link: $color-secondary-blue;
-// $info: $color-primary-cyan;
-// $success: $color-primary-green;
-// $warning: $color-primary-yellow;
-// $danger: $color-primary-red;
-// $dark: $color-dark;
-// $text: $color-dark;
+// $primary: $brand;
+// $primary-invert: $grey-600-light;
+// $link: $blue-600;
+// $info: $blue-500;
+// $success: $green-500;
+// $warning: $orange-600;
+// $danger: $red-500;
+// $dark: $dark;
+// $text: $dark;
 
 // @import "~bulma/sass/utilities/_all.sass";
 // @import "~bulma/sass/base/_all.sass";
