--- a/docs/docs.styles.scss
+++ b/docs/docs.styles.scss
@@ -71,7 +71,7 @@ div[class^="rsg--wrapper"] > h2[class^="rsg--heading"] {
   width: calc(100% + #{$space-xl * 2});
   margin: -#{$space-s} -#{$space-xl} $space-l -#{$space-xl};
   background: $light;
-  font-size: $size-xxl;
+  font-size: 1.5rem;
   a:hover {
     text-decoration: none;
     cursor: default;
@@ -80,7 +80,7 @@ div[class^="rsg--wrapper"] > h2[class^="rsg--heading"] {
     padding: $space-l $space-xl;
   }
   @media (max-width: #{$docs-breakpoint}) {
-    font-size: $size-xl / 1.2;
+    font-size: 1.25rem / 1.2;
     width: calc(100% + #{$space-xl});
     padding: $space-l $space-m;
     margin: -#{$space-s} -#{$space-m} $space-m;
@@ -108,16 +108,16 @@ h2[class^="rsg--heading"] {
   border-bottom: 1px solid $docs-grey;
   padding-bottom: $space-s;
   margin: $space-l 0 $space-m;
-  font-size: $size-xl;
+  font-size: 1.25rem;
   line-height: $line-height-s;
   font-weight: $weight-normal;
   letter-spacing: -0.5px;
   width: 100%;
   @media (max-width: #{$docs-breakpoint}) {
-    font-size: $size-xl / 1.3;
+    font-size: 1.25rem / 1.3;
   }
   @media (max-width: #{$docs-breakpoint-small}) {
-    font-size: $size-xl / 1.6;
+    font-size: 1.25rem / 1.6;
   }
   a {
     color: $docs-color-heading;
@@ -132,10 +132,10 @@ h3[class^="rsg--heading"] a {
   font-weight: $weight-light;
   line-height: $line-height-m;
   margin: 0 0 $space-l;
-  font-size: $size-l;
+  font-size: 1.125rem;
   color: $docs-color-text;
   @media (max-width: #{$docs-breakpoint}) {
-    font-size: $size-l / 1.2;
+    font-size: 1.125rem / 1.2;
     margin: 0 0 $space-m;
   }
 }
@@ -146,7 +146,7 @@ h4[class^="rsg--heading"] a {
   font-weight: $weight-semi-bold;
   letter-spacing: 0;
   margin: $space-l 0 $space-m;
-  font-size: $size-l;
+  font-size: 1.125rem;
   line-height: $line-height-s;
   color: $docs-color-heading;
 }
@@ -228,7 +228,7 @@ p[class^="rsg--version"] {
   border: 1px solid $blue;
   text-transform: uppercase;
   letter-spacing: 1px;
-  font-size: $size-xs;
+  font-size: 0.875rem;
   border-radius: $radius-default;
 }
 
@@ -333,7 +333,7 @@ div[class^="rsg--sidebar"] {
 
       // Sidebar second level link
       a[class*="rsg--link"] {
-        font-size: $size-s;
+        font-size: 1rem;
         font-weight: $weight-normal;
         -webkit-font-smoothing: subpixel-antialiased;
         -moz-osx-font-smoothing: auto;
@@ -409,7 +409,7 @@ pre[class^="rsg--pre"],
   height: auto;
   border: 0;
   font-family: Consolas, "Liberation Mono", Menlo, monospace;
-  font-size: $size-s;
+  font-size: 1rem;
   margin: 0;
   min-height: $space-xxl / 1.5;
   margin-bottom: $space-m;
@@ -447,7 +447,7 @@ div[class^="rsg--tab"] {
       border: 0;
       margin: 0;
       letter-spacing: $spacing-l;
-      font-size: $size-s;
+      font-size: 1rem;
       font-weight: $weight-normal;
       font-family: $font-text;
       line-height: $line-height-s;
@@ -554,7 +554,7 @@ div[class^="rsg--root"] div[class^="rsg--tabs"] {
   padding: $space-xs $space-s $space-xs/1.2;
   text-transform: uppercase;
   letter-spacing: 1px;
-  font-size: $size-xs;
+  font-size: 0.875rem;
   border-radius: $radius-default;
   color: $dark;
   position: absolute;
@@ -604,7 +604,7 @@ table[class^="rsg--table"] {
   width: 100%;
   th {
     padding: $space-s $space-l $space-s $space-s;
-    font-size: $size-s;
+    font-size: 1rem;
     font-weight: $weight-semi-bold;
     text-transform: uppercase;
     letter-spacing: 1px;
@@ -619,7 +619,7 @@ table[class^="rsg--table"] {
     background: transparent;
   }
   td {
-    font-size: $size-s;
+    font-size: 1rem;
     padding: $space-s $space-l $space-s $space-s;
     &:first-child {
       font-weight: $weight-bold;
